--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
 		<!-- JDK/JRE Version -->
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
+		
+		<!-- Rundeck Java Client -->
+		<rundeck.client>2.0</rundeck.client>
 
 		<!-- Maven Lifecycle Plugins Version -->
 		<maven.pluginclean.version>2.5</maven.pluginclean.version>
@@ -38,7 +41,7 @@
 		<dependency>
 			<groupId>org.rundeck</groupId>
 			<artifactId>rundeck-api-java-client</artifactId>
-			<version>2.0</version>
+			<version>${rundeck.client}</version>
 		</dependency>
 	</dependencies>
 
