--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	</prerequisites>
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.rundeck.monitor</groupId>
+	<groupId>com.github.sbugat</groupId>
 	<artifactId>rundeck-monitor</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
