--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>com.github.sbugat</groupId>
 	<artifactId>rundeck-monitor</artifactId>
 	<packaging>jar</packaging>
-	<version>1.6</version>
+	<version>1.7-SNAPSHOT</version>
 	<name>Rundeck monitor</name>
 
 	<!-- Global properties -->
