--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<rundeck.client>11.0</rundeck.client>
 
 		<!-- GitHub Client -->
-		<github.client>3.5.0.201409071800-rc1</github.client>
+		<github.client>3.5.0.201409260305-r</github.client>
 
 		<!-- Google GSON (used/required by GitHub Client)-->
 		<gson.client>2.3</gson.client>
