--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,9 @@
 						<groupId>org.owasp</groupId>
 						<artifactId>dependency-check-maven</artifactId>
 						<version>${maven.pluginowasp.version}</version>
+						<configuration>
+							<suppressionFile>./owasp-false-positive.xml</suppressionFile>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
