--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/classes/
 target/generated-sources/
 target/maven-archiver/
 target/maven-status/
+target/site/
 .classpath
 .project
 .settings
