--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,6 @@
 		<maven.pluginsite.version>3.4</maven.pluginsite.version>
 		<maven.plugincompiler.version>3.2</maven.plugincompiler.version>
 		<maven.pluginsurefire.version>2.18</maven.pluginsurefire.version>
-		<maven.pluginversions.version>2.1</maven.pluginversions.version>
 		<maven.pluginjar.version>2.5</maven.pluginjar.version>
 		<maven.pluginresources.version>2.7</maven.pluginresources.version>
 		<maven.plugindeploy.version>2.8.2</maven.plugindeploy.version>
@@ -95,10 +94,13 @@
 		<maven.pluginantrun.version>1.7</maven.pluginantrun.version>
 		<maven.plugindependency.version>2.9</maven.plugindependency.version>
 		<maven.pluginrelease.version>2.5.1</maven.pluginrelease.version>
+		<!-- Maven reporting plugins -->
+		<maven.pluginversions.version>2.1</maven.pluginversions.version>
 		<maven.pluginowasp.version>1.2.6</maven.pluginowasp.version>
 		<maven.pluginpmd.version>3.3</maven.pluginpmd.version>
 		<maven.pluginfindbugs.version>3.0.0</maven.pluginfindbugs.version>
 		<maven.pluginreports.version>2.7</maven.pluginreports.version>
+		<maven.pluginjxr.version>2.5</maven.pluginjxr.version>
 	</properties>
 
 	<dependencies>
@@ -312,7 +314,13 @@
 					<findbugsXmlOutput>true</findbugsXmlOutput>
 					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
 				</configuration>
-			  </plugin>
+			</plugin>
+			<!-- Inline sources report -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>${maven.pluginjxr.version}</version>
+			</plugin>
 		</plugins>
 	</reporting>
 </project>
