--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
-			<url>https://github.com/Sylvain-Bugat/RundeckMonitor/LICENSE</url>
+			<url>https://raw.githubusercontent.com/Sylvain-Bugat/RundeckMonitor/master/LICENSE</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
