--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 	</scm>
 	<distributionManagement>
 		<site>
-		  <id>github-site</id>
-		  <url>gitsite:git@github.com/Sylvain-Bugat/RundeckMonitor.git</url>
+			<id>rundeck-monitor-github-site</id>
+			<url>scm:git:git://github.com/Sylvain-Bugat/RundeckMonitor.git</url>
 		</site>
 	</distributionManagement>
 	<issueManagement>
@@ -97,6 +97,7 @@
 		<maven.pluginantrun.version>1.7</maven.pluginantrun.version>
 		<maven.plugindependency.version>2.9</maven.plugindependency.version>
 		<maven.pluginrelease.version>2.5.1</maven.pluginrelease.version>
+		<maven.pluginscmpublish.version>1.1</maven.pluginscmpublish.version>
 		<!-- Maven reporting plugins -->
 		<maven.pluginversions.version>2.1</maven.pluginversions.version>
 		<maven.pluginowasp.version>1.2.6</maven.pluginowasp.version>
@@ -271,6 +272,19 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
 					<version>${maven.pluginrelease.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-scm-publish-plugin</artifactId>
+					<version>${maven.pluginscmpublish.version}</version>
+					<configuration>
+						<checkoutDirectory>${project.build.directory}/scmpublish</checkoutDirectory>
+						<checkinComment>Publishing Site Docs for ${project.artifactId}:${project.version}</checkinComment>
+						<content>${project.reporting.outputDirectory}</content>
+						<skipDeletedFiles>true</skipDeletedFiles>
+						<pubScmUrl>scm:git:git@github.com:Sylvain-Bugat/RundeckMonitor.git</pubScmUrl>
+						<scmBranch>gh-pages</scmBranch>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
