--- a/pom.xml
+++ b/pom.xml
@@ -430,6 +430,7 @@
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>${maven.plugincheckstyle.version}</version>
 				<configuration>
+					<configLocation>checkstyle.xml</configLocation>
 					<suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
 				</configuration>
 			</plugin>
