--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 
 		<!-- Rundeck Java Client -->
-		<rundeck.client>12.1-SNAPSHOT</rundeck.client>
+		<rundeck.client>12.0</rundeck.client>
 
 		<!-- GitHub Client -->
 		<github.client>3.6.0.201411121045-m1</github.client>
