--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<prerequisites>
-		<maven>3.0</maven>
+		<maven>${maven.version}</maven>
 	</prerequisites>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -70,6 +70,9 @@
 		<!-- Reporting Encoding -->
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+		<!-- Maven version -->
+		<maven.version>3.0.1</maven.version>
+
 		<!-- JDK/JRE Version -->
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
@@ -100,6 +103,7 @@
 		<maven.pluginresources.version>2.7</maven.pluginresources.version>
 		<maven.plugindeploy.version>2.8.2</maven.plugindeploy.version>
 		<maven.pluginassembly.version>2.5.3</maven.pluginassembly.version>
+		<maven.pluginenforcer.version>1.4</maven.pluginenforcer.version>
 		<maven.pluginantrun.version>1.8</maven.pluginantrun.version>
 		<maven.plugindependency.version>2.10</maven.plugindependency.version>
 		<maven.pluginrelease.version>2.5.1</maven.pluginrelease.version>
@@ -279,6 +283,42 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			<!-- Enforcer plugin configuration -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>${maven.pluginenforcer.version}</version>
+				<executions>
+					<execution>
+						<id>enforce-java</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireJavaVersion>
+									<version>[${maven.compiler.source}.0,)</version>
+								</requireJavaVersion>
+								<requireMavenVersion>
+									<version>[${maven.version},)</version>
+								</requireMavenVersion>
+							</rules>    
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Versions plugin configucation -->
+			<!-- Dependencies check with this command: mvn -U versions:display-plugin-updates  versions:display-property-updates -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>${maven.pluginversions.version}</version>
+				<configuration>
+					<rulesUri>file:./dependencies-check-rules.xml</rulesUri>
+				</configuration>
 			</plugin>
 		</plugins>
 		<pluginManagement>
