--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 	<groupId>com.github.sbugat</groupId>
 	<artifactId>rundeck-monitor</artifactId>
 	<packaging>jar</packaging>
-	<version>2.0-SNAPSHOT</version>
-	<name>RunDeck Monitor</name>
-	<description>a tray-icon to monitor RunDeck executions</description>
+	<version>2.0</version>
+	<name>Rundeck Monitor</name>
+	<description>a tray-icon to monitor Rundeck executions</description>
 	<inceptionYear>2013</inceptionYear>
 	<url>http://sylvain-bugat.github.io/RundeckMonitor</url>
 
@@ -44,7 +44,7 @@
 	</distributionManagement>
 	<issueManagement>
 		<system>GitHub</system>
-		<url>https://github.com/Sylvain-Bugat/RundeckMonitor/issues</url>
+		<url>https://github.com/Sylvain-Bugat/RundeckMonitor/issues/</url>
 	</issueManagement>
 
 	<licenses>
