--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<groupId>com.github.sbugat</groupId>
 	<artifactId>rundeck-monitor</artifactId>
 	<packaging>jar</packaging>
-	<version>2.0</version>
+	<version>2.1-SNAPSHOT</version>
 	<name>Rundeck Monitor</name>
 	<description>a tray-icon to monitor Rundeck executions</description>
 	<inceptionYear>2013</inceptionYear>
