Maven release plugin upgrade
2.5.2 -> 3.0-r1585899

--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 		<maven.pluginenforcer.version>1.4</maven.pluginenforcer.version>
 		<maven.pluginantrun.version>1.8</maven.pluginantrun.version>
 		<maven.plugindependency.version>2.10</maven.plugindependency.version>
-		<maven.pluginrelease.version>2.5.2</maven.pluginrelease.version>
+		<maven.pluginrelease.version>3.0-r1585899</maven.pluginrelease.version>
 		<maven.pluginscmpublish.version>1.1</maven.pluginscmpublish.version>
 		<!-- Maven reporting plugins -->
 		<maven.pluginowasp.version>1.2.7</maven.pluginowasp.version>
